--- a/app/globals.css
+++ b/app/globals.css
@@ -2,12 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body {
   color: var(--foreground);
-  background: var(--background);
+  background-color: rgba(236, 236, 236, 0.234);
   font-family: Arial, Helvetica, sans-serif;
 }
-.poppins{
+.poppins {
   font-family: var(--font-poppins);
 }
