--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 body {
   color: var(--foreground);
-  background-color: rgba(236, 236, 236, 0.234);
+  background-color: rgb(236, 237, 243);
   font-family: Arial, Helvetica, sans-serif;
 }
 .poppins {
