--- a/app/globals.css
+++ b/app/globals.css
@@ -8,5 +8,5 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 .poppins {
-  font-family: var(--font-poppins);
+  font-family: var(--font-roboto);
 }
